--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FindHomeRental">
+        <activity android:name=".ui.home.GoogleSignIn"></activity>
+        <activity android:name=".ui.add_room.AddRoomActivity"></activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
