--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,13 @@ buildscript {
         jcenter()
     }
     dependencies {
+
         classpath "com.android.tools.build:gradle:4.1.2"
 
+        //Firebase:
+        classpath 'com.google.gms:google-services:4.3.8'
+        // Add the following line:
+        classpath 'com.google.gms:google-services:4.3.8'  // Google Services plugin
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
