--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.trinhtien2212.findhomerental">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FindHomeRental">
         <activity android:name=".ui.home.GoogleSignIn"></activity>
-        <activity android:name=".SearchActivity"></activity>
+        <activity android:name=".ui.home.SearchActivity"></activity>
         <activity android:name=".MainAdminActivity"></activity>
         <activity android:name=".RoomListActivity"></activity>
         <activity android:name=".UserListActivity"></activity>
@@ -18,6 +21,7 @@
 
         <activity android:name=".ui.add_room.AddRoomActivity"></activity>
         <activity
+            android:usesCleartextTraffic="true"
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.FindHomeRental.NoActionBar">
