--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,8 +39,12 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    dataBinding {
-        enabled = true
+    buildFeatures {
+
+        dataBinding true
+
+        // for view binding:
+        viewBinding true
     }
 
 }
