sua lai rÃoom detail

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
 android {
     signingConfigs {
         release {
-            storeFile file('G:\\Android_Workspace_Project\\HomeRentalUpdate20072021\\FindHomeRental\\app\\KeystoreRelease.jks')
+            storeFile file('D:\\MobileProject\\Official\\Final2\\FindHomeRental\\app\\KeystoreRelease.jks')
             storePassword '1234567890'
             keyAlias 'key0'
             keyPassword '1234567890'
