--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,17 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FindHomeRental">
+        android:theme="@style/Theme.FindHomeRental"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".RoomsOfAUser"></activity>
+        <activity android:name=".WarnList" />
+        <activity android:name=".ui.warn.WarnDetail" />
         <activity android:name=".ui.home.RoomDetail" />
         <activity android:name=".ui.home.GoogleSignIn" />
         <activity android:name=".ui.home.SearchActivity" />
@@ -28,8 +30,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.FindHomeRental.NoActionBar"
-            >
+            android:theme="@style/Theme.FindHomeRental.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
